syntax = "proto3";

package proto.user;

service UserService {
  rpc SignUp (SignUpRequest) returns (SignUpResponse);
  rpc SignIn (SignInRequest) returns (SignInResponse);
  rpc isExists (isExistsRequest) returns (isExistsResponse);
}

message SignUpRequest {
    string uuid = 1;
    string name = 2;
    string password = 3;
}

message SignUpResponse {
    string uuid = 1;
    string name = 2;
}

message SignInRequest {
    string uuid = 1;
    string password = 2;
}

message SignInResponse {
    string name = 1;
}

message isExistsRequest {
    string uuid = 1;
}

message isExistsResponse {
    bool exists = 1;
}